# aurora-rag

./: .gitignore  README.md  docker-compose.yml
backend/: README.md  pyproject.toml
backend/app/: main.py
backend/app/api/routes/: __init__.py  crawl.py  embed.py  search.py  sites.py  sources.py
backend/app/api/schemas/: sites.py  sources.py
backend/app/application/artifacts/: artifact_service.py
backend/app/application/ingestion/: ingestion_coordinator.py
backend/app/application/use_cases/: crawl_orchestrator.py
backend/app/core/: container.py  database.py  logging.py  settings.py
backend/app/domain/ingestion/: artifact_handler.py  source_handler.py
backend/app/domain/models/: artifact.py  chunk.py  crawl_state.py  document.py  site.py  source.py
backend/app/domain/repositories/: artifact_repository.py  site_repository.py  source_repository.py
backend/app/domain/services/: crawler.py  embedding_provider.py  retriever.py  vector_store.py
backend/app/infrastructure/crawling/: html_parser.py  http_fetcher.py  page_repository.py  url_queue.py
backend/app/infrastructure/db/: init.sql
backend/app/infrastructure/logging/: logger.py
backend/app/infrastructure/repositories/: postgres_artifact_repository.py  postgres_site_repository.py  postgres_source_repository.py
backend/app/infrastructure/vector/: dummy_embedding_provider.py  dummy_retriever.py
backend/app/middleware/: __init__.py  logging.py
backend/tests/: conftest.py  test_utils.py
backend/tests/api/: test_embed.py  test_search.py
frontend/aurora-frontend/: package-lock.json  (+1 more)
(+2 files in other folders)
