[project]
name = "aurora-rag-api"
package-mode = false
version = "0.1.0"
description = "A RAG system for walidnewaz.com"
authors = [
    {name = "Walid Newaz",email = "mdwalid@gmail.com"}
]
license = {text = "N/A"}
readme = "README.md"
requires-python = ">=3.10,<3.15"
dependencies = [
    "fastapi (>=0.124.0,<0.125.0)",
    "uvicorn (>=0.38.0,<0.39.0)",
    "pydantic[dotenv] (>=2.12.5,<3.0.0)",
    "httpx (>=0.28.1,<0.29.0)",
    "pydantic-settings (>=2.12.0,<3.0.0)",
    "selectolax (>=0.4.6,<0.5.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
pythonpath = ["."]

[tool.poetry.group.dev.dependencies]
pytest = "^9.0.2"
mypy = "^1.19.0"
httpx = "^0.28.1"
types-passlib = "^1.7.7.20250602"
pytest-asyncio = "^1.3.0"

